:lipstick: fix home page design
fix design

--- a/content/articles/2022-08-25-shipito.md
+++ b/content/articles/2022-08-25-shipito.md
@@ -1,6 +1,7 @@
 ---
-title: 初めてのブログ投稿
+title: 個人輸入している人必見!アメリカからの輸入で関税を払わない方法
 description: 自分のブログサイトを作成して初めてのブログ投稿になります。
+category: ビジネス
 ---
 
 ### My first blog post
